apps/site/assets/css/_stop-card.scss
.c-stop-card {
  @include icon-size-inline(1.25em, 0);

  background-color: $white;
  border-radius: calc(#{$base-spacing} / 4);
  box-shadow: 0 $space-2 $space-4 $drop-shadow-color;
  margin-top: $base-spacing;
  padding: calc(#{$base-spacing} / 2);

  @include media-breakpoint-up(lg) {
    @include icon-size-inline(1.5em, 0);
  }

  &:first-child {
    margin-top: 0;
  }

  .leaflet-popup-content & {
    box-shadow: none;
  }
}

.c-stop-card__stop-name {
  color: $brand-primary;
  font-weight: bold;
}

.c-stop-card__route {
  align-items: center;
  display: flex;
  justify-content: flex-start;
  padding: calc(#{$base-spacing} / 4) 0;

  .leaflet-popup-content & {
    margin-right: calc(#{$base-spacing} / 2);
  }
}

.c-stop-card__route-link {
  display: block;
  padding-left: calc(#{$base-spacing} / 2);
}

.c-stop-card__bus-pill {
  border-radius: calc(#{$base-spacing} / 4);
  font-weight: bold;
  min-width: 2rem;
  padding: 0 calc(#{$base-spacing} / 4);
  text-align: center;
}

.c-stop-card__distance {
  float: right;
}

.c-stop-card__icon-container {
  display: flex;
}

$radius: 4px;

.stop-routes-and-map {
  background-color: $gray-bordered-background;
  border: .25px solid $gray-lighter;
  border-radius: $radius;
  display: grid;
  gap: .5rem;
  grid-template-columns: 5fr 7fr;
  padding: .75rem;

  .back-to-routes {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
  }

  .stop-routes {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
  }

  .back-to-routes + .stop-routes {
    grid-row: 2 / 3;
  }

  .stop-map {
    grid-column: 2 / 3;
    grid-row: 1 / 3;
  }

  &.selected-departure {
    z-index: 2;
    // on mobile, adopt a full-screen "app" view,
    // with map above departure list
    @include media-breakpoint-down(sm) {
      bottom: 0;
      grid-template-rows: min-content 1fr 1fr;
      left: 0;
      padding-bottom: 0;
      padding-top: 0;
      position: fixed;
      right: 0;
      top: 0;

      .stop-map {
        grid-column: 1 / 2;
        grid-row: 2 / 3;
      }

      .stop-routes {
        grid-row: 3 / 4;
      }
    }
  }

  @include media-breakpoint-down(sm) {
    border-radius: 0;
    grid-template-columns: 1fr;
    margin-left: -$base-spacing;
    margin-right: -$base-spacing;
  }

  @include media-breakpoint-up(md) {
    margin-top: 1rem;
  }

  .stop-map {
    height: 100%;
  }

  .departure-filters {
    display: flex;
    gap: .5rem;
    height: 1.875;
    margin-bottom: .5rem;

    [class*='c-svg__icon'] {
      height: 1em;
      position: relative;
      top: .125em;
      width: 1em;
    }
  }

  .departure-filters button {
    padding: .125em .5em;

    &.active {
      background-color: $brand-primary-lightest;
    }

    &:focus,
    &.active:focus {
      outline-offset: 0;
    }
  }
}

.stop-departures {
  background: $white;
  border: .25px solid $gray-lighter;
  height: 21.875rem;
  list-style: none;
  margin: 0;
  overflow-y: auto;
  padding: .5rem;

  @include media-breakpoint-down(sm) {
    height: unset;
    max-height: 36vh;
  }

  .departure-card {
    background-color: $white;
    border-radius: $radius;
    box-shadow: 0 2px 4px rgba(176, 181, 192, .5);

    & + .departure-card {
      margin-top: .5rem;
    }
  }

  .departure-card__route {
    border-radius: $radius $radius 0 0;
    display: flex;
    font-family: $headings-font-family;
    font-weight: $headings-font-weight;
    gap: .5rem;
    padding: .25rem .5rem;

    &:hover {
      text-decoration: none;
    }
  }

  .bus-route-sign {
    min-width: 5ch;
    padding: 0;
  }

  .c-svg__icon {
    fill: currentColor;
    height: .9em;
    top: .1em;
    width: .9em;

    &--realtime {
      top: 0;
    }
  }

  .departure-card__headsign {
    border: .25px solid $gray-lightest;
    cursor: pointer;
    padding: .5rem;
  }

  .departure-card__headsign-name {
    @include h4();
    flex-grow: 1;
    margin: 0 .5rem 0 0;
    max-width: 16.25rem;
    padding-left: .5rem;
  }

  .departure-card__times {
    font-family: $headings-font-family;
  }

  button {
    background: none;
    border: none;
  }
}

.stop-routes__departures {
  font-family: $headings-font-family;

  ul {
    margin: 0;
  }

  li:not(.c-alert-item) {
    border-top: .25px solid $gray-lightest;
    display: grid;
    grid-template-columns: 1em auto;
    padding: .5rem;
  }

  .c-svg__icon--realtime {
    top: 0;
  }

  .stop-routes__departures-time {
    font-weight: 500;
  }

  .stop-routes__departures-details {
    grid-column: 2;
  }
}

.stop-routes__departures--selected-route {
  background-color: $white;
  border-radius: calc(#{$base-spacing} / 4);
  box-shadow: 0 $space-2 $space-4 $drop-shadow-color;
  height: 20.75rem;
  margin: .5rem;
  overflow-y: scroll;
  @include media-breakpoint-down(sm) {
    margin: 0;
  }
}

.sm-up-hide {
  display: block;
  @include media-breakpoint-up(sm) {
    display: none;
  }
}

.stop-map {
  // style similarly to the Bootstrap tooltip
  .leaflet-popup-content-wrapper,
  .leaflet-popup-tip {
    background-color: $tooltip-bg;
    border: 0;
    color: $tooltip-color;
  }
  .leaflet-popup-content {
    max-width: $tooltip-width;
    padding: calc(#{$base-spacing} / 4) $base-spacing * 1.5
      calc(#{$base-spacing} / 4) calc(#{$base-spacing} / 2);

    @include media-breakpoint-down(xs) {
      max-width: 70vw;
    }
  }

  .leaflet-popup-close-button {
    right: calc(#{$base-spacing} / 4);
    top: calc(#{$base-spacing} / 4);
  }
}

.back-to-routes {
  align-items: center;
  background-color: $gray-bordered-background;
  border: .25px solid $gray-lighter;
  color: $brand-primary;
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  padding-left: .625rem;
  text-decoration: underline;
  text-underline-offset: .2rem;
  :first-child {
    cursor: pointer;
    display: inline-block;
    font-weight: 400;
    :first-child {
      font-weight: 900;
      padding-right: .5rem;
    }
  }
}

.open-schedule {
  float: right;
  font-weight: 400;
  text-decoration: underline;
  text-underline-offset: .2rem;
}

.departure-list-header {
  border: none;
  height: 2rem;
  padding: 0;
  .departure-card__route {
    justify-content: space-between;
  }
}

.departure-list__sub-header {
  height: min-content;
  margin: .5rem;
  .departure-list__origin-stop-name {
    font-size: .875rem;
    font-weight: normal;
    line-height: 1.46;
    @include media-breakpoint-down(sm) {
      line-height: 1.95;
    }
  }
  .departure-list__headsign {
    @include heading-4();
    font-weight: bold;
    margin: 0;
  }
}

